# Mise

./: .commit_msg.tmp  .env.example  .gitattributes  .gitignore  1st_prompt.md  2nd_prompt.md  3rd_prompt.md  4th_prompt.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  skills-lock.json
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py  pipeline.py
backend/app/ai/: __init__.py  client.py  extraction.py  reconciliation.py  routing.py  search.py
backend/app/ai/prompts/: __init__.py  extraction.md  reconciliation.md  routing.md  search.md
backend/app/api/: catalog.py  processing.py  review.py  search.py  sources.py  upload.py
backend/app/core/: config.py  metrics.py  quality.py  store.py
backend/app/domain/: fixtures.py  models.py
backend/app/reconciliation/: __init__.py  gate.py
backend/tests/: conftest.py  test_ai_client.py  test_catalog.py  test_extraction_menu_category.py  test_extraction_user_instructions.py  test_live_reconciliation.py  test_metrics.py  test_models.py  test_pipeline.py  test_processing.py  test_quality.py  test_reconciliation_display.py  test_reconciliation_gate.py  test_review.py  test_routing.py  test_search_rejected.py  test_sources_page.py  test_upload.py  test_upload_no_fixture_leak.py
docs/: acceptance_criteria.md  cockpit_visual_direction.md  competitive_benchmark.md  demo_recording_plan.md  demo_script.md  evals.md  extras.md  hackathon_rules.md  judging_strategy.md  preflight.md  product.md  project_brief.md  references.md  scope_freeze.md  submission_plan.md  timeline.md
(+86 files in other folders)
